--- a/app/components/climate-page/climate-page.html
+++ b/app/components/climate-page/climate-page.html
@@ -13,8 +13,15 @@
       Room Temp: &nbsp;
     </h4>
     <h2 id="room-temp-index">30</h2>
-    <h3>
+    <h3 class="mr-4">
       ºC
+    </h3>
+    <h4>
+      Humidity: &nbsp;
+    </h4>
+    <h2 id="humidity-index">30</h2>
+    <h3>
+      %
     </h3>
   </div>
 
