--- a/app/components/room-list-templ/room-list-templ.html
+++ b/app/components/room-list-templ/room-list-templ.html
@@ -13,7 +13,7 @@
       </button>
       <div
         onclick="dropDownStopPropagation()"
-        class="dropdown-menu animate__animated"
+        class="dropdown-menu rooms-dropdown animate__animated"
         id="rooms-dropdown"
         aria-labelledby="roomListDropDown"
       >
