--- a/app/components/shades/shades.html
+++ b/app/components/shades/shades.html
@@ -8,12 +8,29 @@
         <span class="window-label">Window #{{idx}} </span>
 
         <div class="slider-container shades-container container">
-          <ch5-slider
-            nohandle="true"
-            orientation="vertical"
+          <!-- <ch5-slider
+            nohandle="false"
+            range="true"
             min="0"
             max="100"
-            receivestatevalue="receive_shades_value"
+            receivestatevalue="receive_left_shades_value"
+            receivestatevaluehigh="receive_right_shades_value"
+          >
+          </ch5-slider> -->
+          <ch5-slider
+            class="left-slider"
+            nohandle="true"
+            min="0"
+            max="50"
+            receivestatevalue="receive_left_shades_value"
+          >
+          </ch5-slider>
+          <ch5-slider
+            class="right-slider"
+            nohandle="true"
+            min="0"
+            max="50"
+            receivestatevalue="receive_right_shades_value"
           >
           </ch5-slider>
         </div>
