--- a/app/assets/scss/_layout.scss
+++ b/app/assets/scss/_layout.scss
@@ -5,11 +5,23 @@
   height: 100%;
   padding-top: $header-height;
 
-  .dropdown-menu {
-    min-width: 55rem;
-    left: -5px;
+  // .dropdown-menu {
+  //   min-width: 55rem;
+  //   left: -5px;
+  // }
+  .time {
+    // position: absolute;
+    // right: 33%;
+    // padding-top: 5px;
+    overflow: hidden;
+    z-index: -1;
+    span {
+      font-size: 1.1rem;
+      // // font-family: Arial, Helvetica, sans-serif;
+      // font-family: "Courier New", Courier, monospace;
+      white-space: pre;
+    }
   }
-
   .details-container {
     padding: 2rem;
     min-height: 100%;
