--- a/app/components/menu/menu.html
+++ b/app/components/menu/menu.html
@@ -26,16 +26,11 @@
       </form>
 
       <div class="dropdown-divider"></div>
-      <a class="dropdown-item schedule-trigger" href="#">
-        <!-- <ch5-button
-          class="schedule-trigger"
-          stretch="both"
-          label="Schedule"
-        ></ch5-button> -->
+      <!-- <a class="dropdown-item schedule-trigger invisible" href="#">
         Scheduling</a
-      >
-      <a class="dropdown-item" href="#">Another action</a>
-      <a class="dropdown-item" href="#">Something else here</a>
+      > -->
+      <a class="dropdown-item" href="#">Advance</a>
+      <a class="dropdown-item" href="#">Help</a>
       <div class="dropdown-divider"></div>
       <div class="navbar-action-right">
         <div class="version-info">
