--- a/app/components/room-list-templ/room-list-templ.html
+++ b/app/components/room-list-templ/room-list-templ.html
@@ -2,7 +2,7 @@
   <div class="room-list-templ">
     <div class="dropdown left">
       <button
-        class="btn btn-lg dropdown-btn"
+        class="btn btn-lg dropdown-btn disabled"
         type="button"
         id="roomListDropDown"
         data-toggle="dropdown"
