--- a/app/components/climate-page/climate-page.html
+++ b/app/components/climate-page/climate-page.html
@@ -9,27 +9,19 @@
     </div>
   </div>
   <div class="room-temp d-flex align-items-center">
-    <h4>
-      Room Temp: &nbsp;
-    </h4>
+    <h4>Room Temp: &nbsp;</h4>
     <h2 id="room-temp-index">30</h2>
-    <h3 class="mr-4">
-      ºC
-    </h3>
-    <h4>
-      Humidity: &nbsp;
-    </h4>
+    <h3 class="mr-4">ºC</h3>
+    <h4>Humidity: &nbsp;</h4>
     <h2 id="humidity-index">30</h2>
-    <h3>
-      %
-    </h3>
+    <h3>%</h3>
   </div>
 
   <hr />
   <!-- </nav> -->
   <div class="row">
     <div
-      class="col-12 col-sm-7 order-sm-2 h-sm-4 align-self-start pr-0 d-flex justify-content-center align-items-center"
+      class="col-12 h-sm-4 align-self-start pr-0 d-flex justify-content-center align-items-center"
     >
       <div class="mode-buttons-container d-flex flex-column align-items-center">
         <div class="align-self-start"><h3 class="">Mode</h3></div>
@@ -91,7 +83,7 @@
     </div> -->
     </div>
 
-    <div
+    <!-- <div
       class="col-5 col-sm-5 order-sm-1 pr-0 d-flex justify-content-center align-items-center"
     >
       <div
@@ -138,10 +130,8 @@
           </ch5-button>
         </div>
       </div>
-    </div>
-    <div
-      class="temp-column col-7 col-sm-7 order-sm-3 offset-sm-6 offset-lg-5 align-self-start"
-    >
+    </div> -->
+    <div class="temp-column col-12">
       <div class="row">
         <div class="col-12 col-sm p-0">
           <div
@@ -156,9 +146,7 @@
               >
               </ch5-textinput>
             </div> -->
-            <h1 data-ch5-textcontent="" id="temp-index">
-              29
-            </h1>
+            <h1 data-ch5-textcontent="" id="temp-index">28</h1>
             <h3>ºC</h3>
           </div>
         </div>
